# CameraSimulator

./: CMakeLists.txt  README.md  setup.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: Application.cpp  Application.h  Base.cpp  Base.h  CMakeLists.txt  Command.cpp  Command.h  Compass.cpp  Compass.h  McuMisc.cpp  McuMisc.h  PluginLoader.cpp  PluginLoader.h  Registry.cpp  Registry.h  Status.cpp  Status.h  main.cpp
src/libcore/: CMakeLists.txt
src/libcore/core/: BaseThread.cpp  BaseThread.h  Counter.h  IMqttClient.h  IMqttSubscriber.h  INotifier.h  Logger.cpp  Logger.h  MqttClient.cpp  MqttClient.h  Notifier.cpp  Notifier.h  Utils.cpp  Utils.h
src/plugin/: CMakeLists.txt
src/plugin/plugin/: IPlugin.h
src/plugin/plugin/Heater/: CMakeLists.txt  HeaterTask.cpp  HeaterTask.h  PluginHeater.cpp  PluginHeater.h
src/plugin/plugin/TempMonitor/: CMakeLists.txt  PluginTempMonitor.cpp  TempMonitorTask.cpp  TempMonitorTask.h
src/types/: CMakeLists.txt  heater_t.zcm  power_level_t.zcm  shutdown_t.zcm  start_t.zcm  temperature_t.zcm
